# sourcetrace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-dev.md  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: STATUS.md  agent-operable-help-contract-v1.md  architecture-ssot.md  authority-relevance-live-retrieval-diagnostics-v1-2026-06-28.md  authority-relevance-live-verification-v1-2026-06-28.md  authority-relevance-live-verification-v2-2026-06-28.md  authority-relevance-query-handoff-contract-v1-2026-06-28.md  authority-relevance-source-mix-diagnostics-v1-2026-06-28.md  authority-relevance-source-mix-shaping-v1-2026-06-28.md  authority-relevance-source-type-aware-shaping-v1-2026-06-28.md  authority-relevance-source-typing-consumer-validation-v1-2026-06-28.md  authority-relevance-source-typing-unknown-bucket-diagnostics-v1-2026-06-28.md  authority-relevance-source-typing-v1-2026-06-28.md  authority-relevance-source-typing-v2-2026-06-28.md  authority-relevance-source-typing-v3-2026-06-28.md  authority-relevance-source-typing-v4-or-stop-check-2026-06-28.md  deep-research-architecture-upgrade-plan-v1.md  deep-research-artifact-lint-hardening-implementation-slice-brief-v1.md  deep-research-artifact-lint-health-implementation-followup-2026-06-21.md  deep-research-artifact-lint-health-implementation-slice-brief-v1.md  deep-research-authority-first-filtering-implementation-followup-2026-06-21.md  deep-research-authority-first-filtering-implementation-slice-brief-v1.md  deep-research-authority-first-reranking-followup-2026-06-21.md  deep-research-benchmark-baseline-2026-06-21-evaluator-aware.md  deep-research-benchmark-baseline-followup-2026-06-21.md  deep-research-benchmark-harness-polish-2026-06-21.md  deep-research-benchmark-pack-v1.md  (+100 more)
notes/: README.md
(+288 files in other folders)
