[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcetrace"
version = "0.1.0"
description = "Evidence-centric OSINT + LLM verification system scaffold."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
]

[project.scripts]
sourcetrace-web = "sourcetrace.web.__main__:main"
sourcetrace-local = "sourcetrace.local_launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
