[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcetrace"
version = "0.1.0"
description = "Evidence-centric OSINT + LLM verification system scaffold."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
    "litellm>=1.72,<2",
]

[project.scripts]
sourcetrace-web = "sourcetrace.web.__main__:main"
sourcetrace-local = "sourcetrace.local_launcher:main"
sourcetrace-smoke-flow = "sourcetrace.smoke_flow:main"
sourcetrace-www-start = "sourcetrace.www_control:start_main"
sourcetrace-www-status = "sourcetrace.www_control:status_main"
sourcetrace-www-stop = "sourcetrace.www_control:stop_main"
sourcetrace-www-wait = "sourcetrace.www_control:wait_main"
sourcetrace-www-write-user-unit = "sourcetrace.www_control:write_systemd_unit_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
